# fdm

./: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  data.qrc  fdm.pro
cmake/: SetFlags.cmake
data/: about.txt
src/: FDM.cpp  FDMMainWindow.cpp  FDMMainWindow.h  FDMUtil.cpp
src/devices/: DeviceEntity.h  DeviceResolver.h  EntityTableModel.h  PCIDeviceResolver.h  PCIEntity.cpp  PCIEntity.h  PCIEntityTableModel.cpp  PCIEntityTableModel.h  USBDeviceResolver.cpp  USBEntity.cpp
src/dialogs/: FDMAboutDialog.cpp
src/fdm/: CMakeLists.txt  FDMUtil.h
src/fdm/data/: pci.ids  usb.ids
src/fdm/devices/: EntityTableModel.cpp  FDMDeviceTab.cpp  FDMDeviceTab.h  PCIDeviceResolver.cpp  PCIDeviceResolver.h  PCIEntity.cpp  PCIEntity.h  PCIEntityTableModel.cpp  PCIEntityTableModel.h  USBDeviceResolver.cpp  USBDeviceResolver.h  USBEntity.h  USBEntityTableModel.cpp  USBEntityTableModel.h
src/fdm/dialogs/: FDMAboutDialog.h
src/fdm/util/: MSVCWarnings.h
